force-app/main/default/objects/Entity_Role__c/Entity_Role__c.object-meta.xml
<CustomObject>
    <label>Entity Role</label>
    <nameField>
        <displayFormat>ER-{000}</displayFormat>
        <label>Entity Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>