force-app/main/default/objects/Entity_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entity Roles</relationshipLabel>
    <relationshipName>Entity_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>