force-app/main/default/objects/Entity_Role__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <referenceTo>Entities__c</referenceTo>
    <relationshipLabel>Entity Roles</relationshipLabel>
    <relationshipName>Entity_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>