force-app/main/default/objects/Entity_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager 1</fullName>
            </value>
            <value>
                <fullName>Manager 2</fullName>
            </value>
            <value>
                <fullName>Manager 3</fullName>
            </value>
            <value>
                <fullName>Manager 4</fullName>
            </value>
            <value>
                <fullName>Manager 5</fullName>
            </value>
            <value>
                <fullName>Member 1</fullName>
            </value>
            <value>
                <fullName>Member 2</fullName>
            </value>
            <value>
                <fullName>Member 3</fullName>
            </value>
            <value>
                <fullName>Member 4</fullName>
            </value>
            <value>
                <fullName>Member 5</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Director 1</fullName>
            </value>
            <value>
                <fullName>Director 2</fullName>
            </value>
            <value>
                <fullName>Director 3</fullName>
            </value>
            <value>
                <fullName>Director 4</fullName>
            </value>
            <value>
                <fullName>Director 5</fullName>
            </value>
            <value>
                <fullName>Director 6</fullName>
            </value>
            <value>
                <fullName>Share Holder 1</fullName>
            </value>
            <value>
                <fullName>Share Holder 2</fullName>
            </value>
            <value>
                <fullName>Share Holder 3</fullName>
            </value>
            <value>
                <fullName>Share Holder 4</fullName>
            </value>
            <value>
                <fullName>Corporation General Partner</fullName>
            </value>
            <value>
                <fullName>Limited Partner 1</fullName>
            </value>
            <value>
                <fullName>Limited Partner 2</fullName>
            </value>
            <value>
                <fullName>Limited Partner 3</fullName>
            </value>
            <value>
                <fullName>Limited Partner 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>