force-app/main/default/objects/Entity_Role__c/fields/ShareHolder_Ownership__c.field-meta.xml
<CustomField>
    <fullName>ShareHolder_Ownership__c</fullName>
    <label>ShareHolder/Ownership %</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>