force-app/main/default/objects/Entity_Role__c/fields/State_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>State_of_Residence__c</fullName>
    <label>State of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTA_Issuing_State</valueSetName>
    </valueSet>
</CustomField>