force-app/main/default/objects/Entity_Role__c/validationRules/Enforce_Same_Client_For_Entity_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Same_Client_For_Entity_Contact</fullName>
    <active>true</active>
    <description>Ensures that when an Entity and a Contact are both selected, the Entity&apos;s Primary Client matches the Contact&apos;s Account. This prevents users from accidentally linking records across different clients.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Entity__c)),
    NOT(ISBLANK(Contact__c)),
    Entity__r.Primary_Client__c &lt;&gt; Contact__r.AccountId
)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>The selected Entity and Contact must belong to the same Client.</errorMessage>
</ValidationRule>